Release 0.3.0: trackpad support — scroll to pan, pinch & ⌘/Ctrl+scroll to zoom, zoom buttons